Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17797

Clang Static Analyzer fails with embedded targets

XMLWordPrintable

      Clang Static Analyzer fails with the targets using arm toolchain.
      Clang tries to include soft float header even when the target has been compiled with hard float (-mfloat-abi=hard).

      Steps to reproduce the issue:
      1. Create some Qt project in creator
      2. Setup it to be run on embedded target
      3. Launch clang static analyzer

      Expected outcome:
      Clang static analyzer works also with embedded arm targets

      Actual outcome:
      Clang static analyzer fails

      Tested on:
      Raspberry Pi3

        For Gerrit Dashboard: QTCREATORBUG-17797
        # Subject Branch Project Status CR V

            kosjar Nikolai Kosjar
            kileppal Kimmo Leppälä
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes