ProjectExplorer: Evaluate -mfloat-abi for macros

The option -mfloat-abi sets macros (in this case __ARM_PCS_VFP), so it
should be evaluated while determining the macros for the code model and
the clang static analyzer.

Task-number: QTCREATORBUG-17797
Change-Id: I22a72d31956521b7e2ad7c1126036b25cfe0898d
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>